[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/prompt_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/LevelSelectItem.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 4
border_color = Color( 1, 1, 1, 0.298039 )

[sub_resource type="Theme" id=3]
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/scroll = SubResource( 2 )

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Backing" type="ColorRect" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Fill" type="ColorRect" parent="Backing"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 0, 0, 0, 1 )

[node name="BackButton" type="Button" parent="Backing/Fill"]
margin_left = 1.0
margin_right = 26.0
theme = ExtResource( 1 )
text = "< Back"

[node name="Label" type="Label" parent="Backing/Fill"]
anchor_right = 1.0
theme = ExtResource( 1 )
text = "Select Level"
align = 1
valign = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Backing/Fill"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 11.0
margin_right = -1.0
margin_bottom = -1.0
theme = SubResource( 3 )
scroll_horizontal_enabled = false

[node name="LevelList" type="VBoxContainer" parent="Backing/Fill/ScrollContainer"]
margin_right = 236.0
margin_bottom = 136.4
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="LevelSelectItem" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_right = 236.0
margin_bottom = 9.0

[node name="LevelSelectItem2" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 11.0
margin_right = 236.0
margin_bottom = 20.0

[node name="LevelSelectItem3" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 22.0
margin_right = 236.0
margin_bottom = 31.0

[node name="LevelSelectItem4" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 33.0
margin_right = 236.0
margin_bottom = 42.0

[node name="LevelSelectItem5" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 44.0
margin_right = 236.0
margin_bottom = 53.0

[node name="LevelSelectItem6" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 55.0
margin_right = 236.0
margin_bottom = 64.0

[node name="LevelSelectItem7" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 66.0
margin_right = 236.0
margin_bottom = 75.0

[node name="LevelSelectItem8" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 77.0
margin_right = 236.0
margin_bottom = 86.0

[node name="LevelSelectItem9" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 88.0
margin_right = 236.0
margin_bottom = 97.0

[node name="LevelSelectItem10" parent="Backing/Fill/ScrollContainer/LevelList" instance=ExtResource( 3 )]
margin_top = 99.0
margin_right = 236.0
margin_bottom = 108.0

[connection signal="pressed" from="Backing/Fill/BackButton" to="." method="_on_BackButton_pressed"]
